--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -41,8 +41,8 @@ jobs:
           echo "## 🔒 安全审计报告" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
 
-          AUDIT_OUTPUT=$(npm audit --audit-level=moderate 2>&1) || true
-          AUDIT_EXIT_CODE=$?
+          AUDIT_EXIT_CODE=0
+          AUDIT_OUTPUT=$(npm audit --audit-level=moderate 2>&1) || AUDIT_EXIT_CODE=$?
 
           if [ $AUDIT_EXIT_CODE -eq 0 ]; then
             echo "✅ 未发现已知漏洞" >> $GITHUB_STEP_SUMMARY
@@ -101,7 +101,7 @@ jobs:
           echo "count=$DEPENDENCY_COUNT" >> $GITHUB_OUTPUT
 
       - name: "创建 PR 评论"
-        if: github.event_name == 'pull_request'
+        if: always() && github.event_name == 'pull_request'
         uses: actions/github-script@ed597411d8f924073f98dfc5c65a23a2325f34cd # v8.0.0
         with:
           script: |
