--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "type": "module",
   "packageManager": "npm@10.0.0",
   "scripts": {
-    "dev": "plasmo dev",
-    "build": "plasmo build",
-    "package": "plasmo package",
+    "dev": "wxt",
+    "build": "wxt build",
+    "zip": "wxt zip",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css}\"",
@@ -23,10 +23,9 @@
     "changelog:latest": "git-cliff --latest"
   },
   "dependencies": {
-    "@plasmohq/storage": "1.10.0",
-    "plasmo": "0.90.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "wxt": "0.20.17"
   },
   "devDependencies": {
     "@playwright/test": "1.58.2",
@@ -42,6 +41,7 @@
     "@typescript-eslint/parser": "8.55.0",
     "@vitest/coverage-istanbul": "4.0.18",
     "@vitest/ui": "4.0.18",
+    "@wxt-dev/module-react": "1.1.2",
     "eslint": "9.39.2",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-prettier": "5.5.5",
@@ -61,35 +61,5 @@
     "content-security-policy-parser": "0.6.0",
     "svelte": "4.2.19",
     "esbuild": "0.25.0"
-  },
-  "manifest": {
-    "permissions": [
-      "cookies",
-      "storage",
-      "tabs",
-      "browsingData",
-      "alarms"
-    ],
-    "host_permissions": [
-      "https://*/*",
-      "http://*/*"
-    ]
-  },
-  "plasmo": {
-    "assets": [
-      "assets/icon.png"
-    ],
-    "manifest": {
-      "action": {
-        "default_icon": "icon.png",
-        "default_popup": "popup.html"
-      },
-      "icons": {
-        "16": "icon.png",
-        "32": "icon.png",
-        "48": "icon.png",
-        "128": "icon.png"
-      }
-    }
   }
 }
