refactor: 迁移从 Plasmo 到 WXT 框架

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.sources=background.ts,popup.tsx,store.ts,constants.ts,utils.ts,components,
 sonar.tests=tests
 sonar.sourceEncoding=UTF-8
 
-sonar.exclusions=**/node_modules/**,**/build/**,**/dist/**,**/coverage/**,**/.plasmo/**,**/playwright-report/**
+sonar.exclusions=**/node_modules/**,**/build/**,**/dist/**,**/coverage/**,**/.wxt/**,**/playwright-report/**
 
 sonar.test.exclusions=**/*.test.ts,**/*.test.tsx,**/*.spec.ts,**/*.spec.tsx
 
