--- a/.github/workflows/build-and-check.yml
+++ b/.github/workflows/build-and-check.yml
@@ -494,22 +494,31 @@ jobs:
         if: steps.npm-cache.outputs.cache-hit != 'true'
         run: npm ci --prefer-offline
 
+      - name: 获取版本信息
+        id: e2e-version
+        run: |
+          VERSION=$(jq -r '.version' package.json)
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "📦 版本: $VERSION"
+
       - name: 下载构建产物
         uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131
         with:
-          pattern: extension-*
+          name: extension-${{ steps.e2e-version.outputs.version }}
           path: .output/
-          merge-multiple: true
 
       - name: 准备测试扩展
         run: |
           VERSION=$(jq -r '.version' package.json)
           NAME=$(jq -r '.name' package.json)
 
-          echo "📁 当前 .output/ 目录内容:"
+          echo "📁 当前目录内容:"
+          ls -la
+          
+          echo "📁 .output/ 目录内容:"
           ls -la .output/ || echo "目录为空或不存在"
 
-          # 检查各种可能的目录结构
+          # 检查下载后的目录结构
           if [ -d ".output/${NAME}-${VERSION}-chrome" ]; then
             echo "✅ 找到构建目录: .output/${NAME}-${VERSION}-chrome"
             SOURCE_DIR=".output/${NAME}-${VERSION}-chrome"
@@ -520,20 +529,16 @@ jobs:
             echo "✅ 找到 manifest.json"
             SOURCE_DIR=".output"
           else
-            echo "❌ 未找到构建产物"
-            echo "📁 .output/ 目录内容:"
-            find .output/ -type f 2>/dev/null || echo "目录为空"
+            echo "❌ 未找到构建产物，检查所有目录..."
+            find . -name "manifest.json" -type f 2>/dev/null | head -5
             exit 1
           fi
 
           # E2E 测试期望的目录结构是 build/chrome-mv3-prod
           mkdir -p build
-          cp -r "$SOURCE_DIR" build/chrome-mv3-prod
+          cp -r "$SOURCE_DIR"/* build/chrome-mv3-prod/
 
-          echo "📁 最终 build/ 目录内容:"
-          ls -la build/
-          
-          echo "📁 build/chrome-mv3-prod/ 目录内容:"
+          echo "📁 最终 build/chrome-mv3-prod/ 目录内容:"
           ls -la build/chrome-mv3-prod/
 
       - name: 安装 Playwright 浏览器
