--- a/.github/workflows/build-and-check.yml
+++ b/.github/workflows/build-and-check.yml
@@ -447,7 +447,7 @@ jobs:
           fi
 
       - name: 上传构建产物
-        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f
+        uses: actions/upload-artifact@v4
         with:
           name: extension-build
           path: .output/
@@ -495,7 +495,7 @@ jobs:
         run: npm ci --prefer-offline
 
       - name: 下载构建产物
-        uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131
+        uses: actions/download-artifact@v4
         with:
           name: extension-build
           path: .output/
@@ -542,7 +542,7 @@ jobs:
 
       - name: 上传 Playwright 报告
         if: always()
-        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f
+        uses: actions/upload-artifact@v4
         with:
           name: playwright-report
           path: playwright-report/
@@ -710,9 +710,9 @@ jobs:
           echo "name=$NAME" >> $GITHUB_OUTPUT
 
       - name: 下载构建产物
-        uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131
+        uses: actions/download-artifact@v4
         with:
-          pattern: extension-*
+          name: extension-build
           path: .output/
           merge-multiple: true
 
